--- a/CivilianAlertApp/app/src/main/res/layout/activity_main.xml
+++ b/CivilianAlertApp/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="openQR"
             android:text="Submit" />
 
     </LinearLayout>
