Needs to be fixed, but almost works

--- a/CivilianAlertApp/app/src/main/res/layout/activity_qr__display.xml
+++ b/CivilianAlertApp/app/src/main/res/layout/activity_qr__display.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="387dp"
+        android:layout_height="380dp"
         app:srcCompat="@mipmap/patient_qr_code"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="52dp" />
 </android.support.constraint.ConstraintLayout>
